<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToMore</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_camero">相机</string>
    <string name="main_duoliao">多聊</string>
    <string name="main_meg">杂志</string>
    <string name="main_bianli">便利</string>
    <string name="main_kabao">卡包</string>
    <string name="toolbox_item_backtomain">回主页</string>
    <string name="toolbox_item_tiezi">我的帖子</string>
    <string name="toolbox_item_guanzhu">我的关注</string>
    <string name="toolbox_item_fensi">我的粉丝</string>
    <string name="toolbox_item_blacklist">黑名单</string>
    <string name="toolbox_item_aboutus">关于</string>
    <string name="toolbox_item_logout">退出</string>
    <string name="bar_title_bt_duoliao">多聊</string>
    <string name="bar_title_bt_duoyao">多摇</string>
    <string name="bar_title_meg">杂志</string>
    <string name="bar_title_member">会员卡</string>
    <string name="bar_title_add">添加</string>
    <string name="bar_title_bianli">便利</string>
    <string name="bar_title_fans">粉丝</string>
    <string name="bar_title_following">关注</string>
    <string name="bar_title_blocked">黑名单</string>
    <string name="wait">Wait...</string>
    <string name="dataload">Loading...</string>
    <string name="quit">Quit</string>
    <string name="confirm">Confirm</string>
    <string name="exit">Exit</string>
    <string name="tips">tips</string>
    <string name="sure">sure</string>
    <string name="loading">loading</string>
    <string name="network_failure">network_failure</string>
    <string name="cancel">Cancel</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="member_barcode">条形码</string>
    <string name="member_title">标题</string>
    <string name="member_tomore_card">多点卡</string>
    <string name="member_des">描述</string>
    <string name="bar_title_member_detail">我的卡片</string>
    <string name="bar_title_member_back">会员卡</string>
    <string name="member_barcode_hint">输入条形码</string>
    <string name="member_title_hint">输入卡片名字</string>
    <string name="member_des_hint">输入卡片描述</string>
    <string name="member_edit">编辑</string>
    <string name="member_submit">提交</string>
    <string name="member_generate_barcode">生成条形码</string>
    <!-- 自定义组件 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <!-- 消除警告，可忽略 -->
    <string name="d">图片描述</string>
    <string name="login_email">邮箱/电话</string>
    <string name="login_password">密码</string>
    <string name="login_button">登陆</string>

    <color name="login_background_color">#3191dd</color>
    <color name="login_button_color">#0b52c4</color>

    <string name="submit">提交</string>
    <string name="register_email">邮箱，必填</string>
    <string name="register_user_name">用户名，必填</string>
    <string name="register_password_notice">注册后不可更改，3~20位字符，可包含英文、数字和“_”</string>
    <string name="register_password">密码，必填</string>
    <string name="register_confirm_password">确认密码，必填</string>
    <string name="register_school_notice">请填写您在读或毕业院校</string>
    <string name="register_school">学校</string>
    <string name="register_major_notice">您的相关专业</string>
    <string name="register_major">专业</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="agreement">隐私协议和服务条款</string>
    <string name="bar_title_member_add">添加卡片</string>
    <string name="login_title">登陆</string>
    <string name="register">注册</string>
    <string name="back">返回</string>
    <string name="mandarin">汉</string>
    <string name="cantonese">粤</string>
    <string name="english">英</string>
    <string name="servicelanuage">服务语言</string>
    <string name="contact">联系人</string>
    <string name="detailinfo">详细信息</string>
    <string name="addressinfo">地址信息</string>
    <string name="phone">电话</string>
    <string name="sent">发送</string>
    <string name="wholevideo">完整视频</string>
    <string name="sentMessage">发送短信</string>
    <string name="join">加盟</string>
    <string name="contactTo">联系人：</string>
    <string name="contactThrough">联系方式：</string>
    <string name="leaveMessage">留言：</string>
    <string name="leagueWelcomeMessage">赶快填写商家信息加入便利联盟吧！</string>
    <string name="successMessage">发送成功</string>
    <string name="commentList">评论列表</string>
    <string name="postComment">Post</string>
    <string name="commentPost">发表</string>
    <string name="maglist">杂志列表</string>
    <string name="share">分享</string>
    <string name="comment">评论</string>
    <string name="Order">Order</string>
    <string name="RestaurantsList">餐馆列表</string>
    <string name="CustomMade">定制</string>

    <!-- <string name="Call">呼叫</string> -->
    <string name="PhoneCall">呼叫</string>
    <string name="Cancel">取消</string>
    <string name="Phone">电话</string>
    <string name="bar_title_generalBL_detail">信息详情</string>

    <!-- <string name="bar_title_generalBL_detail">信息详情</string> -->

    <color name="register_background_color">#f7f7f7</color>
    <color name="register_button_color">#5191ff</color>
    <color name="black">#000000</color>
    <color name="grey">#ffffff</color>

    <string-array name="schoolArray">
        <item>Brock University</item>
        <item>Carleton University</item>
        <item>College Dominicain</item>
        <item>College of New Caledonia</item>
        <item>Charles Sturt University</item>
        <item>Dominican University College</item>
        <item>Lakehead University</item>
        <item>Laurentian University</item>
        <item>Algoma University College</item>
        <item>Huntington University</item>
        <item>Thorneloe University</item>
        <item>Université de Hearst</item>
        <item>University of Sudbury</item>
        <item>McMaster University</item>
        <item>Nipissing University</item>
        <item>Ontario College of Art and Design</item>
        <item>Royal Military College of Canada</item>
        <item>Ryerson University</item>
        <item>Trent University</item>
        <item>University of Guelph</item>
        <item>University of Guelph</item>
        <item>University of Ontario Institute of Technology</item>
        <item>University of Ottawa</item>
        <item>Saint Paul University</item>
        <item>University of Toronto</item>
        <item>U of T at Mississauga</item>
        <item>U of T at Scarborough</item>
        <item>Ontario Institute for Studies in Education</item>
        <item>Trinity College</item>
        <item>Victoria University</item>
        <item>University of Waterloo</item>
        <item>University of Western Ontario</item>
        <item>Brescia College</item>
        <item>Huron College</item>
        <item>University of Windsor</item>
        <item>Assumption University</item>
        <item>Wilfrid Laurier University</item>
        <item>Waterloo Lutheran Seminary</item>
        <item>York University</item>
        <item>Glendon College</item>
        <item>其它</item>
    </string-array>

    <string name="loadingNow">正在加载数据</string>
    <string name="pull_to_refresh_tap_label" translatable="false">点击刷新</string>
    <string name="pull_to_refresh_pull_label" translatable="false">下拉刷新</string>
    <string name="pull_to_refresh_release_label" translatable="false">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label" translatable="false">加载中&#8230;</string>
    <string name="pull_to_refresh_update_time_label" translatable="false">上次更新时间 </string>
    <string name="pull_to_refresh_load_label" translatable="false">上拉加载更多</string>
    <string name="load_mode_label" translatable="false">加载更多</string>
    <string name="mag_detail_back">杂志</string>
    <string name="mag_content">正文</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="Call">Call</string>
    <string name="title_activity_thread_reply">ThreadReplyActivity</string>
    <string name="title_activity_user_infomation">UserInfomationActivity</string>
    <string name="title_activity_duoyao">DuoyaoActivity</string>
    <string name="title_activity_search_list">SearchListActivity</string>
    <string name="title_activity_event_list">EventListActivity</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>
    <string name="title_activity_my_reply_list">MyReplyListActivity</string>
    <string name="title_activity_my_thread">MyThreadActivity</string>
    <string name="title_activity_aboutus">AboutusActivity</string>
    <string name="menu_list">精选菜系</string>

</resources>