<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#99000000"
     >
           <Button         
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/Call" 
            android:gravity="center"
            android:textSize="17sp"
            android:id="@+id/CallButton"/>
           
             <View  
         android:background="#BCD2EE" 
         android:layout_width = "fill_parent"
         android:layout_height="1dip" />
                  <Button         
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/Cancel"
            android:gravity="center" 
            android:textSize="17sp"
            android:id="@+id/CancelButton"/>
                    <View  
         android:background="#BCD2EE" 
         android:layout_width = "fill_parent"
         android:layout_height="1dip" />
                         <Button         
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/successMessage"
            android:gravity="center" 
            android:textSize="17sp"
            android:id="@+id/ShowNumber"/>

</LinearLayout>
