<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/login_background_color">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:src="@drawable/tomorelogo" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:ems="10" 
        android:hint="@string/login_email"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etEmail"
        android:layout_alignRight="@+id/etEmail"
        android:layout_below="@+id/etEmail"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/login_password" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:textSize="20sp"
        android:layout_alignLeft="@+id/etPassword"
        android:layout_alignRight="@+id/etPassword"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="55dp"
        android:text="@string/login_button"
        android:background="@color/login_button_color"
        android:onClick="onLoginClick" />

</RelativeLayout>
