<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/container">

        <include
        android:id="@+id/include1"
        layout="@layout/bar_title_league"
        android:focusable="true" />
        
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/leagueWelcomeMessage"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#00B2EE"  />

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/contactTo"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:layout_marginLeft="10dp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/contactThrough"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:textColor="#000000" />

        <EditText
            android:id="@+id/contactText"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leaveMessage"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"  />

        <EditText
            android:id="@+id/messageText"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginLeft="52dp"
            android:layout_marginRight="10dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:ems="10" />
    </LinearLayout>


</LinearLayout>