<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:orientation="vertical"
    android:padding="15dip" >

    <include
        layout="@layout/bar_title_member_add"
        android:focusable="true" />

    <ImageView
        android:id="@+id/frontViewImg"
        android:layout_width="100dp"
        android:layout_height="120dp" >
    </ImageView>

    <ImageView
        android:id="@+id/BackViewImg"
        android:layout_width="100dp"
        android:layout_height="120dp" >
    </ImageView>

    <ImageView
        android:id="@+id/barcodeImg"
        android:layout_width="100dp"
        android:layout_height="120dp" >
    </ImageView>

    <TextView
        android:id="@+id/barcodeLable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dip"
        android:text="@string/member_barcode"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editBarcode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="输入条形码" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/titleLable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dip"
        android:text="@string/member_title"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="输入卡片名字" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/desLable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dip"
        android:text="@string/member_des"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editDes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="输入卡片描述" >

        <requestFocus />
    </EditText>

</LinearLayout>